--- a/browser/index.html
+++ b/browser/index.html
@@ -9,5 +9,5 @@
 <style>*{margin:0;padding:0;box-sizing:border-box;outline:none;font-family:Roboto,sans-serif}body{background-color:#000}</style><link rel="stylesheet" href="styles-ZUI672EE.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-ZUI672EE.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-BF6LA5L3.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-P2JZ7EGJ.js" type="module"></script></body>
 </html>
